--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/draft-js": "^0.11.17",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-quill": "^2.0.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^9.0.4",
     "sharp": "^0.33.2"
   },
@@ -25,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "typescript": "^5"
