--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-quill": "^2.0.0",
-    "react-redux": "^9.0.4",
-    "sharp": "^0.33.2"
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
