--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.18",
     "@mui/x-charts": "^7.5.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "bootstrap-icons": "^1.11.3",
     "next": "14.0.4",
     "next-auth": "^4.24.7",
     "react": "^18",
